# lta

./: .env  .env.example  .gitignore  README.md  config.py  dataset.py  device.py  infer.py  model.py  pyproject.toml  requirements.txt  run.py  run_ui.py  train.py
.codex_samples/after_fix/: greeter.py  main.py  requirements.txt
.codex_samples/after_fix_final/: README.md  __init__.py  main.py  pyproject.toml
.codex_samples/after_fix_validated/: README.md  main.py  pyproject.toml
.codex_samples/before_fix/: README.md  setup.py
.codex_samples/before_fix/tests/: test_setup.py
config/: default.yaml  models.yaml
examples/: run_examples.py
local_team_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  main.py  retry_policy.py  setup.py
src/agents/: __init__.py  base.py  coder.py  document_agent.py  manager.py  planner.py  researcher.py  reviewer.py  tester.py  vision_agent.py
src/backends/: __init__.py  base.py  device_utils.py  ollama_backend.py  transformers_backend.py
src/logging_utils/: __init__.py  logger.py
src/memory/: __init__.py  retrieval.py  task_history.py
src/orchestration/: __init__.py  engine.py  messages.py
src/tools/: __init__.py  document.py  filesystem.py  image.py  shell.py  web_search.py
src/ui/: app.py
src/workspace/: __init__.py  manager.py
tests/: test_agent_effectiveness.py  test_attached_and_documents.py  test_basic.py  test_chat_mode_workspace.py  test_cli_comparison_features.py  test_fake_artifact_bug.py  test_generated_python_project_workflow.py  test_retry.py
workspaces/: task_history.db
workspaces/python으로_rest_api를_만들어줘_20260408_163910/: .project.json
workspaces/python으로_rest_api를_만들어줘_20260409_101720/: .history.db  .project.json
(+19 files in other folders)
