[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-cli"
version = "0.1.0"
description = "A simple CLI tool to greet users"
authors = [
    {name = "Software Engineer", email = "engineer@example.com"}
]
dependencies = []
requires-python = ">=3.7"

[project.scripts]
hello-cli = "main:main"

[tool.setuptools]
py-modules = ["main"]